[package]
name = "macro-asm-builder"
version = "1.0.0"
edition = "2021"
authors = ["Maxime Bouillot maxbouillot@gmail.com"]
license = "BSD-3-Clause"
description = "A library to make macro-assemblers."
documentation = "https://docs.rs/macro-asm-builder"
repository = "https://github.com/Arkaeriit/macro-asm-builder"
homepage = "https://github.com/Arkaeriit/macro-asm-builder"

[lib]
name = "macro_asm_builder"
path = "src/macro_asm_builder.rs"

[dependencies]
math-parse = "1.0.2"

